fix top alignment and label of related topics in dynamic content list

--- a/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/assembly/_dynamic_content_list.scss
+++ b/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/assembly/_dynamic_content_list.scss
@@ -89,13 +89,14 @@
   }
 
   .related-topics {
-    margin-top: 46px;
     label {
       text-transform: uppercase;
       font-size: 14px;
       letter-spacing: .5px;
       display: block;
       margin-bottom: 15px;
+      font-weight: bold;
+      color: black;
     }
     .content-link-list {
       a {
@@ -114,5 +115,9 @@
       }
 
     }
+  }
+
+  .disqus+.related-topics {
+    margin-top: 46px;
   }
 }
